Fix Shield.style wrong color

--- a/src/elements/Shield/Shield.styl
+++ b/src/elements/Shield/Shield.styl
@@ -30,7 +30,7 @@
   --shield-text-color $color-tone-white
 
   &.inverted
-    --shield-text-color $color-tone-message
+    --shield-text-color $color-tone-black
 
   // Border radius
 
@@ -59,7 +59,7 @@
     border-color var(--shield-message-color)  
     --shield-label-text-color var(--shield-message-color)
     --shield-message-text-color var(--shield-text-color)
-    --shield-message-fill-color var(--shield-text-color)
+    --shield-message-fill-color tranparant
 
   // Rules
 
